<resources>
    <string name="app_name">Scholarship Management</string>
    <string name="pendaftar">Remaining</string>
    <string name="webclient_id">621942935909-ne4g8p16aaliv9omqb19q7p4e7upvgni.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="use_other_filter">Try to use other filter setting</string>
    <string name="data_in_process">Applicant Data is in Process, Please Try Again Later</string>
    <string name="filter_applicant">Filter Applicant</string>
    <string name="applicant_status">Applicant Status</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="on_hold">On Hold</string>
    <string name="rejected">Rejected</string>
    <string name="document_status">Document Status</string>
    <string name="data_valid">Data Valid</string>
    <string name="home_valid">Home Valid</string>
    <string name="data_and_home_valid">Data and Home Valid</string>
    <string name="province">Province</string>
    <string name="enter_province_name">Enter Province Name</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="campaign_image">Campaign Image</string>
    <string name="no_applicant_found">No Applicant Found</string>
    <string name="back_to_home">Back To Home</string>
    <string name="show_filter_and_download_csv_menu_image">Show Filter And Download CSV Menu Image</string>
    <string name="empty_state_applicant_image">Empty State Applicant Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="our_campaigns">Our Campaigns</string>
    <string name="home_heading">Please kindly review our applicants form</string>
    <string name="no_available_campaign_yet">No Available Campaign Yet</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="cerita_latar_belakang">Cerita Latar Belakang</string>
    <string name="cerita_perjuangan_pendidikan">Cerita Memperjuangkan Pendidikan</string>
    <string name="seberapa_penting_beasiswa">Seberapa Penting Beasiswa Ini</string>
    <string name="rincian_beasiswa">Rincian Beasiswa</string>
    <string name="foto_rumah">Foto Rumah</string>
    <string name="bukti_ipk_rapot">Bukti IPK / Rapot</string>
    <string name="kegiatan_aktif">Kegiatan Aktif</string>
    <string name="detail_score">Detail Score</string>
    <string name="belum_direview">Belum Direview</string>
    <string name="other">Lainnya</string>
    <string name="unduh_lampiran_dokumen">Unduh Lampiran Dokumen</string>
    <string name="tentukan_pilihan">Tentukan Pilihan :</string>
    <string name="pilihan">Pilihan</string>
    <string name="catatan_reviewer">Catatan Reviewer :</string>
    <string name="alasan_pilihan">Berikan Alasan Atas Pilihan Tersebut</string>
    <string name="reviewer_terakhir">Reviewer Terakhir :</string>
    <string name="submit">Submit</string>
    <string name="either_incorrect">Either Email or Password Incorrect</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_log_in_with">or log in with</string>
    <string name="text">Text</string>
    <string name="masuk">Masuk</string>
    <string name="score_provinsi">Score Provinsi</string>
    <string name="score_kota_kabupaten">Score Kota/Kabupaten</string>
    <string name="score_nik">Score NIK</string>
    <string name="score_sosial_media">Score Sosial Media</string>
    <string name="score_cerita_penggunaan_dana">Score Cerita Penggunaan Dana</string>
    <string name="score_kepemilikan_rumah">Score Kepemilikan Rumah</string>
    <string name="score_klasifikasi_rumah">Score Klasifikasi Rumah</string>
    <string name="score_cerita_latar_belakang">Score Cerita Latar Belakang</string>
    <string name="score_cerita_perjuangan">Score Cerita Perjuangan</string>
    <string name="score_cerita_beasiswa_ini_penting">Score Cerita Beasiswa Ini Penting</string>
    <string name="score_cerita_kegiatan">Score Cerita Kegiatan</string>
    <string name="total">Total :</string>
    <string name="nama">Nama</string>
    <string name="univ_or_sekolah">Universitas / Sekolah</string>
    <string name="jurusan_kelas">Jurusan / Kelas</string>
    <string name="nim">NIM</string>
    <string name="nik">NIK</string>
    <string name="no_telp">No Telp</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="alamat">Alamat</string>
    <string name="ok">OK</string>
    <string name="buat_campaign">Buat Campaign</string>
    <string name="nama_campaign">Nama Campaign</string>
    <string name="nama_penggalang">Nama Penggalang</string>
    <string name="snk">SnK</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="id_gsheet">ID GSheet</string>
    <string name="select_picture">Select Picture</string>
    <string name="create">Create</string>
    <string name="proses_data">Proses Data</string>
    <string name="retry">retry</string>
    <string name="pilihan_bantuan">Pilihan Bantuan :</string>
    <string name="total_biaya">Total Biaya :</string>
    <string name="cerita_penggunaan_dana">Cerita Penggunaan Dana :</string>
    <string name="download_results_csv">Download Results CSV</string>
    <string name="show_filter">Show Filter</string>
    <string name="logout">Logout</string>
</resources>